--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ main {
 }
 
 #messagesList {
-  background-color: #f2f1ed;
+  background-color: #f7f4ea;
   padding: 20px;
   margin: 20px auto;        
   width: 100%;
@@ -117,10 +117,10 @@ button:hover {
 
 ul {
   list-style-type: disc;
-  margin: 20px 0;
+  margin: 20px auto;      
   padding-left: 20px;
   width: 100%;
-  max-width: 600px;
+  max-width: 500px;
   min-height: 80px;
   text-align: left;
 }
