--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
   font-family: 'Courier New', Courier, monospace;
   font-weight: 400;
-  background-color: #c2bcae;
+  background-color: #B8C1D9;
   color: #474747;
   margin: 0;
   padding: 0;
@@ -52,7 +52,7 @@ main {
 }
 
 #messagesList {
-  background-color: #f7f4ea;
+  background-color: #c5cad9;
   padding: 20px;
   margin: 20px auto;        
   width: 100%;
@@ -77,7 +77,7 @@ input[type="text"] {
   font-family: inherit;
   font-size: 16px;
   border: 2px solid #474747;
-  background-color: #f7f4ea;
+  background-color: #c5cad9;
   color: #333;
   text-align: center;
 }
@@ -91,7 +91,7 @@ textarea {
   font-family: inherit;
   font-size: 16px;
   border: 2px solid #474747;
-  background-color: #f7f4ea;
+  background-color: #c5cad9;
   color: #333;
   text-align: center;
   resize: vertical;
@@ -102,7 +102,7 @@ button {
   font-family: inherit;
   font-size: 16px;
   background-color: #474747;
-  color: #f7f4ea;
+  color: #c5cad9;
   border: none;
   cursor: pointer;
   margin: 10px auto;
